--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
   ],
   "author": "Andrew Smith",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme"
+  "homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme",
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1"
+  }
 }
