--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Application to upload data for machine learning",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node tools/srcServer.js",
     "test": "test"
   },
   "repository": {
@@ -20,7 +21,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/polyfill": "^7.0.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
@@ -32,8 +33,15 @@
     "redux": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "express": "^4.16.4",
+    "open": "0.0.5",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
