--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Application to upload data for machine learning",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node tools/srcServer.js",
-    "test": "test"
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch",
+    "open:src": "babel-node tools/srcServer.js",
+    "prestart": "babel-node tools/startMessage.js",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- -watch"
   },
   "repository": {
     "type": "git",
@@ -38,7 +43,18 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "acorn": "^6.0.4",
+    "colors": "^1.3.3",
+    "eslint": "^5.10.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-watch": "^4.0.2",
+    "expect": "^23.6.0",
     "express": "^4.16.4",
+    "jsdom": "^13.1.0",
+    "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.5",
     "open": "0.0.5",
     "webpack": "^4.27.1",
     "webpack-dev-middleware": "^3.4.0",
