--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "acorn": "^6.0.4",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "colors": "^1.3.3",
     "eslint": "^5.10.0",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-watch": "^4.0.2",
