--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.1"
   },
@@ -48,6 +50,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "colors": "^1.3.3",
+    "css-loader": "^2.1.0",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
@@ -59,6 +62,7 @@
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "open": "0.0.5",
+    "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
