--- a/.eslintrc
+++ b/.eslintrc
@@ -77,5 +77,21 @@
 		"react/react-in-jsx-scope": 1,
 		"react/self-closing-comp": 1,
 		"react/sort-comp": 1
+	},
+	"settings": {
+		"react": {
+			"createClass": "createReactClass", // Regex for Component Factory to use,
+			// default to "createReactClass"
+			"pragma": "React",  // Pragma to use, default to "React"
+			"version": "detect", // React version. "detect" automatically picks the version you have installed.
+			// You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
+			"flowVersion": "0.53" // Flow version
+		},
+		"propWrapperFunctions": [
+			// The names of any function used to wrap propTypes, e.g. `forbidExtraProps`. If this isn't set, any propTypes wrapped in a function will be skipped.
+			"forbidExtraProps",
+			{"property": "freeze", "object": "Object"},
+			{"property": "myFavoriteWrapper"}
+		]
 	}
 }
