--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "opn": "^5.4.0",
     "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
