--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jsdom": "^13.2.0",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "1.18.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.38.0",
     "webpack-dev-middleware": "^3.7.0",
