feature-#2-implement-redux: Configure Webpack

--- a/package.json
+++ b/package.json
@@ -1,71 +1,82 @@
 {
-  "name": "trelloid",
-  "version": "0.1.0",
-  "description": "Drag and drop project management tool.",
-  "main": "index.js",
-  "scripts": {
-    "lint": "node_modules/.bin/esw webpack.config.* src tools",
-    "lint:watch": "npm run lint -- --watch",
-    "open:src": "babel-node tools/srcServer.js",
-    "prestart": "babel-node tools/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch test:watch",
-    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- -watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@bitbucket.org/boosmith/react-node-go-machine-learning.git"
-  },
-  "keywords": [
-    "react",
-    "go",
-    "machine-learning",
-    "nodejs"
-  ],
-  "author": "Andrew Smith",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme",
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "opn": "^5.5.0",
-    "popper.js": "^1.15.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.5.5",
-    "acorn": "^6.2.1",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "colors": "^1.3.3",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-watch": "^4.0.2",
-    "expect": "^24.8.0",
-    "express": "^4.17.1",
-    "jsdom": "^13.2.0",
-    "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "1.18.2",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.38.0",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-hot-middleware": "^2.25.0"
-  }
+	"name": "trelloid",
+	"version": "0.1.0",
+	"description": "Drag and drop project management tool.",
+	"main": "index.js",
+	"scripts": {
+		"lint": "node_modules/.bin/esw webpack.config.* src tools",
+		"lint:watch": "npm run lint -- --watch",
+		"open:src": "babel-node tools/srcServer.js",
+		"prestart": "babel-node tools/startMessage.js",
+		"prestart:api": "node tools/createMockDb.js",
+		"start:api": "node tools/apiServer.js",
+		"start:dev": "webpack-dev-server --config webpack.config.dev.js --port 3000",
+		"start": "npm-run-all --parallel open:src lint:watch test:watch",
+		"test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+		"test:watch": "npm run test -- -watch"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@bitbucket.org/boosmith/react-node-go-machine-learning.git"
+	},
+	"keywords": [
+		"react",
+		"go",
+		"machine-learning",
+		"nodejs"
+	],
+	"author": "Andrew Smith",
+	"license": "ISC",
+	"homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme",
+	"dependencies": {
+		"bootstrap": "^4.3.1",
+		"jquery": "^3.4.1",
+		"opn": "^5.5.0",
+		"popper.js": "^1.15.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-redux": "^6.0.1",
+		"react-router-dom": "^4.3.1",
+		"react-router-redux": "^4.0.8",
+		"redux": "^4.0.4"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.5.5",
+		"@babel/core": "^7.5.5",
+		"@babel/node": "^7.5.5",
+		"@babel/preset-env": "^7.5.5",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/register": "^7.5.5",
+		"acorn": "^6.2.1",
+		"babel-eslint": "^10.0.2",
+		"babel-loader": "^8.0.6",
+		"babel-preset-react-app": "^9.0.0",
+		"bson": "^4.0.2",
+		"colors": "^1.3.3",
+		"css-loader": "^2.1.1",
+		"eslint": "^5.16.0",
+		"eslint-loader": "^2.2.1",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-react": "^7.14.3",
+		"eslint-watch": "^4.0.2",
+		"expect": "^24.8.0",
+		"express": "^4.17.1",
+		"html-webpack-plugin": "^3.2.0",
+		"jsdom": "^13.2.0",
+		"json-server": "^0.15.0",
+		"mocha": "^5.2.0",
+		"npm-run-all": "^4.1.5",
+		"prettier": "1.18.2",
+		"react-app-polyfill": "^1.0.1",
+		"redux-immutable-state-invariant": "^2.1.0",
+		"regenerator-runtime": "^0.13.3",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.38.0",
+		"webpack-bundle-analyzer": "^3.4.1",
+		"webpack-cli": "^3.3.6",
+		"webpack-dev-middleware": "^3.7.0",
+		"webpack-dev-server": "^3.7.2",
+		"webpack-hot-middleware": "^2.25.0"
+	}
 }
