--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"react-redux": "^6.0.1",
 		"react-router-dom": "^4.3.1",
 		"react-router-redux": "^4.0.8",
-		"redux": "^4.0.4"
+		"redux": "^4.0.4",
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.5",
