--- a/.eslintrc
+++ b/.eslintrc
@@ -17,18 +17,14 @@
 		"es6": true,
 		"browser": true,
 		"node": true,
-		"jquery": true,
-		"mocha": true
+		"jest": true
 	},
 	"rules": {
 		"quotes": 0,
 		"no-console": 1,
 		"no-debugger": 1,
 		"no-var": 1,
-		"semi": [
-			1,
-			"always"
-		],
+		"semi": [1, "always"],
 		"no-trailing-spaces": 0,
 		"eol-last": 0,
 		"no-unused-vars": 0,
@@ -45,9 +41,7 @@
 		"react/forbid-prop-types": [
 			1,
 			{
-				"forbid": [
-					"any"
-				]
+				"forbid": ["any"]
 			}
 		],
 		"react/jsx-boolean-value": 1,
@@ -80,7 +74,7 @@
 		"react": {
 			"createClass": "createReactClass", // Regex for Component Factory to use,
 			// default to "createReactClass"
-			"pragma": "React",  // Pragma to use, default to "React"
+			"pragma": "React", // Pragma to use, default to "React"
 			"version": "detect", // React version. "detect" automatically picks the version you have installed.
 			// You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
 			"flowVersion": "0.53" // Flow version
@@ -88,8 +82,8 @@
 		"propWrapperFunctions": [
 			// The names of any function used to wrap propTypes, e.g. `forbidExtraProps`. If this isn't set, any propTypes wrapped in a function will be skipped.
 			"forbidExtraProps",
-			{"property": "freeze", "object": "Object"},
-			{"property": "myFavoriteWrapper"}
+			{ "property": "freeze", "object": "Object" },
+			{ "property": "myFavoriteWrapper" }
 		]
 	}
 }
