--- a/package.json
+++ b/package.json
@@ -1,79 +1,117 @@
 {
-	"name": "trelloid",
-	"version": "0.1.0",
-	"description": "Drag and drop project management tool.",
-	"main": "index.js",
+	"name": "ps-redux",
+	"description": "React and Redux Pluralsight course by Cory House",
 	"scripts": {
+		"start": "run-p start:dev start:api",
+		"start:dev": "webpack-dev-server --config webpack.config.dev.js --port 3000",
 		"prestart:api": "node tools/createMockDb.js",
 		"start:api": "node tools/apiServer.js",
-		"start:dev": "webpack-dev-server --config webpack.config.dev.js --port 3000",
-		"start": "run-p start:dev start:api",
-		"test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
-		"test:watch": "npm run test -- -watch"
+		"test": "jest --watch",
+		"test:ci": "jest",
+		"clean:build": "rimraf ./build && mkdir build",
+		"prebuild": "run-p clean:build test:ci",
+		"build": "webpack --config webpack.config.prod.js",
+		"postbuild": "run-p start:api serve:build",
+		"serve:build": "http-server ./build"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@bitbucket.org/boosmith/react-node-go-machine-learning.git"
+	"jest": {
+		"setupFiles": [
+			"./tools/testSetup.js"
+		],
+		"moduleNameMapper": {
+			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
+			"\\.(css|less)$": "<rootDir>/tools/styleMock.js"
+		}
 	},
-	"keywords": [
-		"react",
-		"go",
-		"machine-learning",
-		"nodejs"
-	],
-	"author": "Andrew Smith",
-	"license": "ISC",
-	"homepage": "https://bitbucket.org/boosmith/react-node-go-machine-learning#readme",
 	"dependencies": {
-		"bootstrap": "^4.3.1",
+		"bootstrap": "4.3.1",
+		"bson": "^4.0.2",
+		"immer": "2.1.3",
 		"jquery": "^3.4.1",
-		"opn": "^5.5.0",
 		"popper.js": "^1.15.0",
-		"prop-types": "^15.7.2",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-redux": "^6.0.1",
-		"react-router-dom": "^4.3.1",
-		"react-router-redux": "^4.0.8",
-		"redux": "^4.0.4",
-		"redux-thunk": "^2.3.0"
+		"prop-types": "15.7.2",
+		"react": "16.8.4",
+		"react-dom": "16.8.4",
+		"react-redux": "6.0.1",
+		"react-router-dom": "5.0.0",
+		"react-toastify": "4.5.2",
+		"redux": "4.0.1",
+		"redux-thunk": "2.3.0",
+		"reselect": "4.0.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.5.5",
-		"@babel/core": "^7.5.5",
-		"@babel/node": "^7.5.5",
-		"@babel/preset-env": "^7.5.5",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/register": "^7.5.5",
-		"acorn": "^6.2.1",
-		"babel-eslint": "^10.0.2",
-		"babel-loader": "^8.0.6",
-		"babel-preset-react-app": "^9.0.0",
-		"bson": "^4.0.2",
-		"colors": "^1.3.3",
-		"css-loader": "^2.1.1",
-		"eslint": "^5.16.0",
-		"eslint-loader": "^2.2.1",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-react": "^7.14.3",
-		"eslint-watch": "^4.0.2",
-		"expect": "^24.8.0",
-		"express": "^4.17.1",
-		"html-webpack-plugin": "^3.2.0",
-		"jsdom": "^13.2.0",
-		"json-server": "^0.15.0",
-		"mocha": "^5.2.0",
-		"npm-run-all": "^4.1.5",
-		"prettier": "1.18.2",
-		"react-app-polyfill": "^1.0.1",
-		"redux-immutable-state-invariant": "^2.1.0",
-		"regenerator-runtime": "^0.13.3",
-		"style-loader": "^0.23.1",
-		"webpack": "^4.39.1",
+		"@babel/core": "7.3.4",
+		"babel-eslint": "10.0.1",
+		"babel-loader": "8.0.5",
+		"babel-preset-react-app": "7.0.2",
+		"css-loader": "2.1.1",
+		"cssnano": "4.1.10",
+		"enzyme": "3.9.0",
+		"enzyme-adapter-react-16": "1.11.2",
+		"eslint": "5.15.2",
+		"eslint-loader": "2.1.2",
+		"eslint-plugin-import": "2.16.0",
+		"eslint-plugin-react": "7.12.4",
+		"fetch-mock": "7.3.1",
+		"html-webpack-plugin": "3.2.0",
+		"http-server": "0.11.1",
+		"jest": "24.5.0",
+		"json-server": "0.14.2",
+		"mini-css-extract-plugin": "0.5.0",
+		"node-fetch": "^2.3.0",
+		"npm-run-all": "4.1.5",
+		"postcss-loader": "3.0.0",
+		"react-test-renderer": "16.8.4",
+		"react-testing-library": "6.0.0",
+		"redux-immutable-state-invariant": "2.1.0",
+		"redux-mock-store": "1.5.3",
+		"rimraf": "2.6.3",
+		"style-loader": "0.23.1",
+		"webpack": "4.29.6",
 		"webpack-bundle-analyzer": "^3.4.1",
-		"webpack-cli": "^3.3.6",
-		"webpack-dev-middleware": "^3.7.0",
-		"webpack-dev-server": "^3.7.2",
-		"webpack-hot-middleware": "^2.25.0"
+		"webpack-cli": "3.3.0",
+		"webpack-dev-server": "3.2.1"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"babel": {
+		"presets": [
+			"babel-preset-react-app"
+		]
+	},
+	"eslintConfig": {
+		"extends": [
+			"eslint:recommended",
+			"plugin:react/recommended",
+			"plugin:import/errors",
+			"plugin:import/warnings"
+		],
+		"parser": "babel-eslint",
+		"parserOptions": {
+			"ecmaVersion": 2018,
+			"sourceType": "module",
+			"ecmaFeatures": {
+				"jsx": true
+			}
+		},
+		"env": {
+			"browser": true,
+			"node": true,
+			"es6": true,
+			"jest": true
+		},
+		"rules": {
+			"no-debugger": "off",
+			"no-console": "off",
+			"no-unused-vars": "warn",
+			"react/prop-types": "warn"
+		},
+		"settings": {
+			"react": {
+				"version": "detect"
+			}
+		},
+		"root": true
 	}
 }
