--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 		"test": "jest --watch",
 		"test:ci": "jest",
 		"clean:build": "rimraf ./build && mkdir build",
-		"prebuild": "run-p clean:build test:ci",
+		"prebuild": "run-p clean:build",
 		"build": "webpack --config webpack.config.prod.js",
 		"postbuild": "run-p start:api serve:build",
-		"serve:build": "http-server ./build"
+		"serve:build": "http-server -p 3005 ./build"
 	},
 	"jest": {
 		"setupFiles": [
