--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"serve:build": "http-server -p 3005 ./build"
 	},
 	"jest": {
+		"setupFiles": [
+			"./tools/testSetup.js"
+		],
 		"moduleNameMapper": {
 			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
 			"\\.(css|less)$": "<rootDir>/tools/styleMock.js"
