--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "jest --watch",
 		"test:ci": "jest",
 		"clean:build": "rimraf ./build && mkdir build",
-		"prebuild": "run-p clean:build",
+		"prebuild": "run-p clean:build test:ci",
 		"build": "webpack --config webpack.config.prod.js",
 		"postbuild": "run-p start:api serve:build",
 		"serve:build": "http-server -p 3005 ./build"
