--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react-toastify": "4.5.2",
 		"redux": "4.0.1",
 		"redux-thunk": "2.3.0",
+		"remarkable": "^2.0.0",
 		"reselect": "4.0.0"
 	},
 	"devDependencies": {
