--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"prop-types": "15.7.2",
 		"react": "16.8.4",
 		"react-dom": "16.8.4",
+		"react-html-parser": "^2.0.2",
 		"react-redux": "6.0.1",
 		"react-router-dom": "5.0.0",
 		"react-toastify": "4.5.2",
