--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ps-redux",
 	"description": "React and Redux Pluralsight course by Cory House",
 	"scripts": {
-		"start": "run-p start:dev start:api",
+		"start": "npm run build",
 		"start:dev": "webpack-dev-server --config webpack.config.dev.js --port 3000",
 		"prestart:api": "node tools/createMockDb.js",
 		"start:api": "node tools/apiServer.js",
