--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"redux": "4.0.1",
 		"redux-thunk": "2.3.0",
 		"remarkable": "^2.0.0",
-		"reselect": "4.0.0"
+		"reselect": "4.0.0",
+		"rimraf": "2.6.3"
 	},
 	"devDependencies": {
 		"@babel/core": "7.3.4",
@@ -67,7 +68,6 @@
 		"react-testing-library": "6.0.0",
 		"redux-immutable-state-invariant": "2.1.0",
 		"redux-mock-store": "1.5.3",
-		"rimraf": "2.6.3",
 		"style-loader": "0.23.1",
 		"webpack": "4.29.6",
 		"webpack-bundle-analyzer": "^3.4.1",
