--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"bootstrap": "4.3.1",
 		"bson": "^4.0.2",
+		"express": "^4.17.1",
 		"immer": "2.1.3",
 		"jquery": "^3.4.1",
 		"popper.js": "^1.15.0",
