--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-  "name": "trelloid",
-  "description": "Kanban board front end app.",
-  "scripts": {
-    "eject": "react-scripts eject",
-    "start": "react-scripts start",
-    "prestart:api": "node tools/createMockDb.js",
-    "start:api": "node tools/apiServer.js",
-    "test": "react-scripts test",
-    "build": "react-scripts build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "bson": "^4.0.2",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "immer": "^2.1.5",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-html-parser": "^2.0.2",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.1.1",
-    "react-toastify": "^4.5.2",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "remarkable": "^2.0.0",
-    "reselect": "^4.0.0",
-    "typescript": "^3.5.3"
-  },
-  "devDependencies": {
-    "cssnano": "^4.1.10",
-    "fetch-mock": "^7.3.9",
-    "json-server": "^0.14.2",
-    "node-fetch": "^2.3.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^3.0.0",
-    "redux-immutable-state-invariant": "^2.1.0",
-    "redux-mock-store": "^1.5.3",
-    "style-loader": "^0.23.1"
-  },
-  "engines": {
-    "node": ">=8"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "trelloid",
+	"description": "Kanban board front end app.",
+	"scripts": {
+		"eject": "react-scripts eject",
+		"start": "run-p start:dev start:api",
+		"start:dev": "REACT_APP_ENV=development react-scripts start",
+		"prestart:api": "node src/tools/createMockDb.js",
+		"start:api": "node src/tools/apiServer.js",
+		"test": "react-scripts test",
+		"build": "react-scripts build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"dependencies": {
+		"bootstrap": "^4.3.1",
+		"bson": "^4.0.2",
+		"dotenv": "^8.1.0",
+		"express": "^4.17.1",
+		"immer": "^2.1.5",
+		"jquery": "^3.4.1",
+		"popper.js": "^1.15.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
+		"react-html-parser": "^2.0.2",
+		"react-redux": "^6.0.1",
+		"react-router-dom": "^5.0.1",
+		"react-scripts": "^3.1.1",
+		"react-toastify": "^4.5.2",
+		"redux": "^4.0.4",
+		"redux-thunk": "^2.3.0",
+		"remarkable": "^2.0.0",
+		"reselect": "^4.0.0",
+		"typescript": "^3.5.3"
+	},
+	"devDependencies": {
+		"cssnano": "^4.1.10",
+		"fetch-mock": "^7.3.9",
+		"json-server": "^0.14.2",
+		"node-fetch": "^2.3.0",
+		"npm-run-all": "^4.1.5",
+		"postcss-loader": "^3.0.0",
+		"redux-immutable-state-invariant": "^2.1.0",
+		"redux-mock-store": "^1.5.3",
+		"style-loader": "^0.23.1"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
