--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "trelloid",
 	"description": "Kanban board front end app.",
+	"main": "server.js",
 	"scripts": {
 		"eject": "react-scripts eject",
 		"start": "run-p start:dev start:api",
@@ -8,7 +9,8 @@
 		"prestart:api": "node src/tools/createMockDb.js",
 		"start:api": "node src/tools/apiServer.js",
 		"test": "react-scripts test",
-		"build": "react-scripts build"
+		"build": "react-scripts build",
+		"postinstall": "react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
