--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "node-fetch": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
+    "random-words": "^1.1.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-mock-store": "^1.5.3",
     "style-loader": "^0.23.1"
