--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
