--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.17.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "history": "^4.9.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "immer": "^2.1.5",
