--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "@material-ui/core": "^4.4.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react-app": "^9.0.1",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "bson": "^4.0.2",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "ignore-styles": "^5.0.1",
     "immer": "^2.1.5",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -35,7 +43,7 @@
     "redux-thunk": "^2.3.0",
     "remarkable": "^2.0.0",
     "reselect": "^4.0.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.2"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
